white space fix again presale

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,7 +378,7 @@ header .nav-link:focus,
     font-family: var(--poppins);
     font-size: 14px;
     font-weight: 500;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .table_offer tbody tr {
@@ -460,6 +460,7 @@ header .nav-link:focus,
     margin-bottom: 37px;
     position: relative;
     z-index: 99999;
+    margin-top: 11px;
 }
 
 .live_reverse {
@@ -500,7 +501,7 @@ header .nav-link:focus,
 
 .timer .progress,
 .timer .progress-stacked {
-    --bs-progress-height: 61px;
+    --bs-progress-height: 63px;
     border-radius: 75px;
     --bs-progress-bg: #87A8F9;
     --bs-progress-bar-bg: #3772FF;
